fix some spacing issues on movieCrd, add theLatest view

--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -39,6 +39,7 @@ a {
 
 .masthead.center.aligned.segment .text {
     position: inherit;
+    margin-top: 1em;
 }
 
 .masthead.center.aligned.segment:before {
